# rag-powered-crm

./: .gitignore  README.md
.claude/: settings.local.json
chatbot/: Dockerfile  run.sh
chatbot/data/: __init__.py  database_router.py
crm/: Dockerfile  requirements.txt
crm/agents/: __init__.py
crm/auth/: google_domain_auth.py  providers.py
csv/: setup.py
frontend-next/: .gitignore  .prettierrc  Dockerfile  global.d.ts  instrumentation-client.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json
leadgen/: .dockerignore  Dockerfile  requirements.txt
prelude-chatbot/: .env.example  README.md  main.py  requirements.txt
prelude-crm/: Dockerfile  main.py  pyrightconfig.json
prelude-csv/: README.md
prelude-frontend-next/: .eslintrc.json  .prettierignore  instrumentation.ts  knip.json  next.config.mjs  proxy.ts
prelude-leadgen/: .gitignore  main.py  requirements.txt
prelude-shared/: pyproject.toml
prelude-shared/email_core/: translation.py  writing_style.py
prelude-shared/email_core/delivery/: __init__.py  base.py  send.py  signature_formatter.py  smtp.py
prelude-shared/email_core/generation/: prompt_builder.py  trade_utils.py
prelude-shared/email_core/sync/: common.py  gmail_helpers.py
prelude-shared/email_core/triage/: classifier.py
prelude-shared/service_core/: auth.py  oauth.py  pool.py
prelude-shared/service_core.egg-info/: PKG-INFO
prelude-user-settings/: Dockerfile  requirements.txt
user-settings/: Dockerfile  main.py  requirements.txt
(+735 files in other folders)
